--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PlayersContext": "Server=(localdb)\\mssqllocaldb;Database=PlayersContext-8dbb7485-5e97-44ca-ad5c-d8292cf242a1;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "CharacterContext": "Server=(localdb)\\mssqllocaldb;Database=CharacterContext-12e60f08-8720-4865-a0e5-de1d91989fc2;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "LevelsContext": "Server=(localdb)\\mssqllocaldb;Database=LevelsContext-b953c1be-a72a-46bf-8326-a6f72b0fcf48;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
